Bug 254912 - activity manager: activity icon extends after clicking "Apply Changes"
Summary: activity manager: activity icon extends after clicking "Apply Changes"
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: activities (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Chani
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-10-21 23:16 UTC by Alexander Potashev
Modified: 2010-10-22 10:32 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Potashev 2010-10-21 23:16:11 UTC
Version:           unspecified (using Devel) 
OS:                Linux

1. Open activity manager.
2. Choose an activity and click "Configure activity".
3. Click "Apply Changes".
4. Repeat steps 2 and 3 as many times as you want.
After each reconfiguration the icon of the activity becomes wider and wider.



Reproducible: Always




KDE 4.5.73
Comment 1 Chani 2010-10-22 00:32:13 UTC
you're reporting a bug against a feature that only recently appeared and is actively being developed in trunk. a bug that is rather obvious, too.

just trust that the developers aren't entirely stupid, and wait a bit. :)
Comment 2 Ivan Čukić 2010-10-22 10:32:18 UTC
SVN commit 1188365 by ivan:

Fixed layouting issues when closing the inline widget

BUG:254912




 M  +16 -22    activityicon.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1188365