Fixed layouting issues when closing the inline widget

BUG:254912



svn path=/trunk/KDE/kdebase/workspace/; revision=1188365